--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -21,6 +21,9 @@
 {{#if user}}
 {{>user-header}}
 {{/if}}
+{{#if third}}
+{{>third-head}}
+{{/if}}
 {{{body}}}
     {{!-- ---------------header section ends ----------------- --}}
 
