--- a/views/partials/third-head.hbs
+++ b/views/partials/third-head.hbs
@@ -2,7 +2,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <div class="container d-flex align-itmes-center justify-content-center">
-                     <a class="navbar-brand" href="#">Food Delivery Admin</a>
+                     <a class="navbar-brand" href="#">Popular Cusines Near By</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
