--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,41 +1,44 @@
+{{!-- ---------------header section ends ----------------- --}}
 
 
+{{!-- ------------------ Section-Starts -------------------------- --}}
 
-    {{!-- ---------------header section ends ----------------- --}}
+<section>
 
-   
-    {{!-- ------------------ Section-Starts -------------------------- --}}
-
- <section>
-
-        <div class="container mt-5">
-            <div class="row ">
-             {{#each product}}
-                <div class="col-md-3 mt-5">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{this.image}}"
-                            class="card-img-top" alt="Image Not found" style="height: 14rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{this.name}}</h5>
-                            <div style="display: flex; flex-direction: row; justify-content: space-between;">
-                                <p class="card-text">{{this.description}}</p>
-                                <p class="card-text">{{this.prize}}</p>
-                            </div>
-                            <p class="card-text">{{this.place}}</p>
-                            {{!-- <a href="#" class="btn btn-outline-success btn-sm d-flex justify-content-center">Order Now!</a> --}}
-                            <div class=" d-flex flex-direction-row align-itmes-center justify-content-center">
-                               <button type="button" class="btn btn-outline-success btn-sm" style="width: 15rem;">Order Now!</button>
-                            </div>
+    <div class="container mt-5">
+        <div class="row ">
+            {{#each product}}
+            <div class="col-md-3 mt-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{this.image}}" class="card-img-top" alt="Image Not found" style="height: 14rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.name}}</h5>
+                        <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                            <p class="card-text">{{this.description}}</p>
+                            <p class="card-text">{{this.prize}}</p>
+                        </div>
+                        <p class="card-text">{{this.place}}</p>
+                        {{!-- <a href="#" class="btn btn-outline-success btn-sm d-flex justify-content-center">Order Now!</a> --}}
+                        <div class=" d-flex flex-direction-row align-itmes-center justify-content-center">
+                            <button type="button" class="btn btn-outline-success btn-sm" style="width: 15rem;">Order
+                                Now!</button>
                         </div>
                     </div>
                 </div>
-            {{/each}}
             </div>
+            {{/each}}
         </div>
-    </section>
+    </div>
+</section>
+
+<section>
+    <div class="conainer fluid d-flex align-itmes-center justify-content-center">
+        <h1 class="display-6 mt-5 mb-5">End of Page</h1>
+    </div>
+    <div class="d-grid gap-2 col-6 mb-5 mx-auto">
+        <a type="button" class="btn btn-outline-success" href="/third">Want to explore more. Tap now!</a>
+    </div>
+</section>
 
 
-    {{!-- ------------------ Section-Ends -------------------------- --}}
-
-
-   
+{{!-- ------------------ Section-Ends -------------------------- --}}
